# PythonProject6

./: .coverage  .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.py  utils.py
tests/: conftest.py  test_main.py
